...
        android:textColor="@color/dark_text_welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_speciality_image"
        tools:text="General Dentistry" />

    <TextView
        android:id="@+id/tv_speciality_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
...
